--- a/src/common.blocks/lot.scss
+++ b/src/common.blocks/lot.scss
@@ -77,6 +77,10 @@
     padding: 0 $defaultPadding;
     display: none;
 
+    &_active {
+      display: flex;
+    }
+
     &-amount {
       @include mixins.flex(row);
       > * {
@@ -96,6 +100,10 @@
     border-top: 1px solid #232427;
     cursor: default;
     display: none;
+
+    &_active {
+      display: flex;
+    }
 
     &-caption {
       opacity: 0.5;
